client/src/components/Market/Market.css
.market {
  margin: 0px 0px 40px 0px;
  padding: 0px 0px 20px 0px;
}

.market-head h1 {
  margin-bottom: 20px;
}

.product,
.order-product {
  color: #000 !important;
  background-color: #fff;
  border-radius: 10px;
  padding-top: 10px;
}

.product:hover {
  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.2);
}

.product-link {
  color: #000;
  text-decoration: none;
}

.product-link:hover {
  color: #f76b1a;
  text-decoration: none;
}

.product img {
  width: 100%;
}

.product-name,
.store-name {
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.product-name {
  font-size: smaller;
}

.price {
  margin: 10px 0px;
  font-weight: 600;
}

.price-before {
  text-decoration: line-through;
  color: #5d6d7e;
}

@media screen and (max-width: 960px) {
  .market {
    padding: 20px 0px 0px 0px;
  }

  .product div {
    padding-left: 10px;
  }

  .product div {
    margin-top: 20px;
  }

  .product:hover {
    box-shadow: none;
  }

  .price {
    font-weight: normal;
    margin: 0;
  }
}

@media screen and (max-width: 540px) {
  .product-name,
  .store-name {
    width: 140px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
  }
}

